--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,15 +1,39 @@
 .navbar {
-    background-color: rgb(255, 166, 0);
+    background-color: rgb(55, 125, 200);
     width: 100%;
 }
 
-.navbar-content{
-    background-color: rgb(141, 141, 141);
+.navbar-content {
+    background-color: #666;
 }
 
 .banner {
     background-image: url("../../assets/car-collection.jpg");
     width: 100%;
-    height: 10vh;
-    background-position-y: 50%;
+    height: 12vh;
+    background-position-y: 39%;
+    background-position-x: 50%;
+}
+
+.navbar h1 {
+    font-size: 3rem;
+    color: white;
+    margin: 0;
+    padding: 0rem 1rem;
+    text-shadow: 2px 2px black;
+}
+
+.navbar-items {
+    text-align: center;
+}
+
+.navbar li {
+    display: inline-block;
+    padding: 0rem 1rem;
+
+}
+
+.navbar a {
+    text-decoration: none;
+    color: white;
 }
